[package]
authors = ["yuanxing2002@163.com"]
description = "cron macro codegen"
documentation = "https://docs.rs/cron_macro_codegen/0.1.5/cron_macro_codegen/"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cron_macro_codegen"
repository = "https://github.com/wing-zacharias/cron_macro_codegen.git"
version = "0.1.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
cron = "0.12.0"
lazy_static = "1.4.0"
regex = "1.8.0"
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full", "macros"]}
tokio-cron-scheduler = "0.9.4"
uuid = {version = "1.3.0", default-features = false, features = ["serde", "v4"]}

[dependencies.proc-macro2]
default-features = false
version = "1.0.36"

[dependencies.quote]
default-features = false
version = "1.0.14"

[dependencies.syn]
default-features = false
features = ["full", "fold"]
version = "1.0.109"
